refactor: extract plan definition in model